# cmake

./: CMakeLists.txt  README.MD
src/: CMakeLists.txt
src/common/include/infra/: Base.h
src/hackson/: CMakeLists.txt  README.md
src/hackson/include/: Hackson.h
src/hackson/include/domain/: AlgorithmRole.h  BestGraph.h  ContextRole.h  Edge.h  Graph.h  GraphRole.h  Node.h  NodeMapRole.h  ShortestEdgeRole.h
src/hackson/include/trans/: Service.h
src/hackson/source/: Hackson.cpp
src/hackson/source/domain/: AlgorithmRole.cpp  BestGraph.cpp  ContextRole.cpp  Edge.cpp  GraphRole.cpp  Node.cpp  NodeMapRole.cpp  ShortestEdgeRole.cpp
src/hackson/source/trans/: Service.cpp
src/lifegame/: CMakeLists.txt
src/lifegame/source/domain/: CellState.cpp
test/: CMakeLists.txt
test/hackson/resource/data-MultiRoots/: edges.txt  nodes.txt
test/hackson/resource/data-SingleRoot/: edges.txt  nodes.txt  result_prim1.txt
test/hackson/resource/data-big/: nodes.txt
test/hackson/test/: HacksonTest.cpp
test/lifegame/test/: LifeGameTest.cpp
